[Display State List]

--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,7 +6,7 @@
     <body>
         <h1>States</h1>
         <ul>
-            {% for item in states %}
+            {% for item in states|sort(attribute="name") %}
                 <li>{{ item['id'] }}: <b>{{ item['name'] }}</b></li>
             {% endfor %}
         </ul>
