--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -4,6 +4,6 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        <H1>Number: {{ number }} is {{ number_type }}</H1>
+        <H1>Number: {{ number }} is {{ state }}</H1>
     </BODY>
 </HTML>
