--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -1,5 +1,4 @@
 @charset "utf-8";
-
 /* simple style reset */
 ul, li, h2, h1 {
     margin: 0;
@@ -38,7 +37,6 @@ ul, li, h2, h1 {
     position: relative;
 }
 
-
 .filters, .btn-search, .popover {
     border-radius: 4px;
 }
@@ -54,17 +52,13 @@ ul, li, h2, h1 {
 .locations h3, .amenities h3 {
     font-weight: 600;
     margin-bottom: 0;
-}
-
-.locations h4, .amenities h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin-top: 0;
-}
-.locations h3, .amenities h3,
-.locations h4, .amenities h4 {
     margin-left: 50px;
     line-height: 1.35em;
+}
+/* State Name */
+.popover h2 {
+    font-size: 2em;
+    margin: 0 0 25px 25px;
 }
 
 .popover {
@@ -74,18 +68,25 @@ ul, li, h2, h1 {
     position: absolute;
     top: 5em;
     z-index: 1;
-    max-height: 300px;
+    max-height: 255px;
     overflow-y: scroll;
     padding: 30px 0;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide_scrollbar::-webkit-scrollbar {
+    display: none;
+}
+  
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide_scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 .locations:hover .popover,
 .amenities:hover .popover {
     display: block;
-}
-
-.popover h2 {
-    margin: 0 0 5px 25px;
 }
 
 .amenities .popover li,
@@ -100,14 +101,14 @@ ul, li, h2, h1 {
 
 /* Extra space between list's last item and State Heading */
 .locations .popover li > ul li:last-child {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .filters button:hover,
 .amenities .popover li,
 .locations .popover li ul li,
 .locations,
-.amenities {
+.filters > .amenities {
     cursor: pointer;
 }
 
